Now the graph is actually printed, but the camera view should be fixed and the axis should be added